Fix comment box occasionally showing overflow

--- a/src/subtitulamos/resources/assets/css/episode.scss
+++ b/src/subtitulamos/resources/assets/css/episode.scss
@@ -525,7 +525,7 @@
   align-items: center;
   position: relative;
   margin: 5px;
-  width: 98%;
+  width: 96%;
 
   &.stacked {
     padding: 0.5em;
